Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -12,13 +12,13 @@
         <title>Mathis Dubrul</title>
         <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Mathis Dubrul" />
-        <meta name="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
-        <meta name="og:type" content="website" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Mathis Dubrul" />
+        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io/archives.html" />
-        <meta name="og:url" content="https://matouche.github.io/archives.html" />
+        <meta property="og:url" content="https://matouche.github.io/archives.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
