--- a/bord-de-mer.html
+++ b/bord-de-mer.html
@@ -12,13 +12,13 @@
         <title>Bord de mer - Mathis Dubrul</title>
         <meta name="description" content="Même lieu mais 2 compositions en opposition." />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Bord de mer - Mathis Dubrul" />
-        <meta name="og:description" content="Même lieu mais 2 compositions en opposition." />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Bord de mer - Mathis Dubrul" />
+        <meta property="og:description" content="Même lieu mais 2 compositions en opposition." />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/phare.jpg" />
         <link rel="canonical" href="https://matouche.github.io/bord-de-mer.html" />
-        <meta name="og:url" content="https://matouche.github.io/bord-de-mer.html" />
+        <meta property="og:url" content="https://matouche.github.io/bord-de-mer.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,8 +55,8 @@
         </header>
 
     <div class="article_content">
-        <p><img alt="Phare" src="https://cdnb.artstation.com/p/assets/images/images/009/855/747/large/mathis-dubrul-dubrul-mathis-b2h1-compo2.jpg?1521237350">
-<img alt="Ville Portuaire" src="https://cdna.artstation.com/p/assets/images/images/009/960/428/large/mathis-dubrul-dubrul-mathis-b2h1-compo-1.jpg?1521787157"></p>
+        <p><img alt="Phare" src="https://matouche.github.io/images/phare.jpg">
+<img alt="Ville Portuaire" src="https://cdna.artstation.com/p/assets/images/images/009/960/428/large/mathis-dubrul-dubrul-mathis-b2h1-compo-1.jpg"></p>
 <p>Même lieu mais 2 compositions en opposition.</p>
     </div>
 </article>
