--- a/cherchez-la-chevre.html
+++ b/cherchez-la-chevre.html
@@ -12,13 +12,13 @@
         <title>Cherchez la chèvre - Mathis Dubrul</title>
         <meta name="description" content="Un même décor en plans rabattus mais à quatre moments différents." />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Cherchez la chèvre - Mathis Dubrul" />
-        <meta name="og:description" content="Un même décor en plans rabattus mais à quatre moments différents." />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Cherchez la chèvre - Mathis Dubrul" />
+        <meta property="og:description" content="Un même décor en plans rabattus mais à quatre moments différents." />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/chevre_nuit.jpg" />
         <link rel="canonical" href="https://matouche.github.io/cherchez-la-chevre.html" />
-        <meta name="og:url" content="https://matouche.github.io/cherchez-la-chevre.html" />
+        <meta property="og:url" content="https://matouche.github.io/cherchez-la-chevre.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -56,7 +56,7 @@
 
     <div class="article_content">
         <p><img alt="La chèvre au soleil" src="https://cdna.artstation.com/p/assets/images/images/008/611/266/large/mathis-dubrul-exo2-je-dubrul-mathis-b2h1.jpg"></p>
-<p><img alt="La chèvre dans la nuit" src="https://cdnb.artstation.com/p/assets/images/images/008/611/263/large/mathis-dubrul-exo2-n-dubrul-mathis-b2h1.jpg"></p>
+<p><img alt="La chèvre dans la nuit" src="https://matouche.github.io/images/chevre_nuit.jpg"></p>
 <p><img alt="La chèvre sous la pluie" src="https://cdna.artstation.com/p/assets/images/images/008/611/264/large/mathis-dubrul-exo2-jp-dubrul-mathis-b2h1.jpg"></p>
 <p><img alt="La chèvre au soleil couchant" src="https://cdnb.artstation.com/p/assets/images/images/008/611/269/large/mathis-dubrul-exo2-cs-dubrul-mathis-b2h1.jpg"></p>
 <p>Un même décor en plans rabattus mais à quatre moments différents.</p>
