--- a/little-agent.html
+++ b/little-agent.html
@@ -13,14 +13,14 @@
         <meta name="description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
 méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Little Agent - Mathis Dubrul" />
-        <meta name="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Little Agent - Mathis Dubrul" />
+        <meta property="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
 méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io//images/little_agent_screenshot_1.png" />
         <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
-        <meta name="og:url" content="https://matouche.github.io/little-agent.html" />
+        <meta property="og:url" content="https://matouche.github.io/little-agent.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
