--- a/peur-bleue.html
+++ b/peur-bleue.html
@@ -13,14 +13,14 @@
         <meta name="description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
 et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Peur bleue - Mathis Dubrul" />
-        <meta name="og:description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Peur bleue - Mathis Dubrul" />
+        <meta property="og:description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
 et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/peur_bleue.jpg" />
         <link rel="canonical" href="https://matouche.github.io/peur-bleue.html" />
-        <meta name="og:url" content="https://matouche.github.io/peur-bleue.html" />
+        <meta property="og:url" content="https://matouche.github.io/peur-bleue.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
