--- a/rotomathisoscope.html
+++ b/rotomathisoscope.html
@@ -12,13 +12,13 @@
         <title>Rotomathisoscope - Mathis Dubrul</title>
         <meta name="description" content="After Effects qui tourne, avec un peu de rotoscopie et de Greenkey dedans." />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Rotomathisoscope - Mathis Dubrul" />
-        <meta name="og:description" content="After Effects qui tourne, avec un peu de rotoscopie et de Greenkey dedans." />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Rotomathisoscope - Mathis Dubrul" />
+        <meta property="og:description" content="After Effects qui tourne, avec un peu de rotoscopie et de Greenkey dedans." />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io/rotomathisoscope.html" />
-        <meta name="og:url" content="https://matouche.github.io/rotomathisoscope.html" />
+        <meta property="og:url" content="https://matouche.github.io/rotomathisoscope.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
