--- a/unheimliche.html
+++ b/unheimliche.html
@@ -12,13 +12,13 @@
         <title>Unheimliche - Mathis Dubrul</title>
         <meta name="description" content="Une illu qui angoisse. Exercice de composition par le vide, en équilibre." />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Unheimliche - Mathis Dubrul" />
-        <meta name="og:description" content="Une illu qui angoisse. Exercice de composition par le vide, en équilibre." />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Unheimliche - Mathis Dubrul" />
+        <meta property="og:description" content="Une illu qui angoisse. Exercice de composition par le vide, en équilibre." />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/unheimliche.jpg" />
         <link rel="canonical" href="https://matouche.github.io/unheimliche.html" />
-        <meta name="og:url" content="https://matouche.github.io/unheimliche.html" />
+        <meta property="og:url" content="https://matouche.github.io/unheimliche.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,7 +55,7 @@
         </header>
 
     <div class="article_content">
-        <p><img alt="Unheimliche" src="https://cdnb.artstation.com/p/assets/images/images/009/524/953/large/mathis-dubrul-dubrul-mathis-illu-vide.jpg?1519485885"></p>
+        <p><img alt="Unheimliche" src="https://matouche.github.io/images/unheimliche.jpg"></p>
 <p>Une illu qui angoisse. Exercice de composition par le vide, en équilibre.</p>
     </div>
 </article>
