--- a/matin-calme.html
+++ b/matin-calme.html
@@ -12,13 +12,13 @@
         <title>Matin calme - Mathis Dubrul</title>
         <meta name="description" content="Défidéfous #23" />
         <meta name="author" content="Mathis Dubrul" />
-        <meta name="og:site_name" content="Mathis Dubrul">
-        <meta name="og:title" content="Matin calme - Mathis Dubrul" />
-        <meta name="og:description" content="Défidéfous #23" />
-        <meta name="og:type" content="article" />
-        <meta name="og:image" content="images/favicon.png" />
+        <meta property="og:site_name" content="Mathis Dubrul">
+        <meta property="og:title" content="Matin calme - Mathis Dubrul" />
+        <meta property="og:description" content="Défidéfous #23" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io/matin-calme.html" />
-        <meta name="og:url" content="https://matouche.github.io/matin-calme.html" />
+        <meta property="og:url" content="https://matouche.github.io/matin-calme.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
