Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -11,11 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Mathis Dubrul</title>
-        <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
+        <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Mathis Dubrul" />
-        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
+        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io/archives.html" />
@@ -42,14 +42,20 @@
 <h1>Archives for Mathis Dubrul</h1>
 
 <dl>
+    <dt>mar. 26 juin 2018</dt>
+    <dd><a href="https://matouche.github.io/demo-reel-2018.html">Demo Reel 2018</a></dd>
     <dt>jeu. 07 juin 2018</dt>
     <dd><a href="https://matouche.github.io/little-agent.html">Little Agent</a></dd>
+    <dt>lun. 28 mai 2018</dt>
+    <dd><a href="https://matouche.github.io/oiseaux-migrateurs.html">Oiseaux migrateurs</a></dd>
     <dt>lun. 23 avril 2018</dt>
     <dd><a href="https://matouche.github.io/rotomathisoscope.html">Rotomathisoscope</a></dd>
     <dt>sam. 17 mars 2018</dt>
     <dd><a href="https://matouche.github.io/bord-de-mer.html">Bord de mer</a></dd>
     <dt>sam. 03 février 2018</dt>
     <dd><a href="https://matouche.github.io/unheimliche.html">Unheimliche</a></dd>
+    <dt>jeu. 18 janvier 2018</dt>
+    <dd><a href="https://matouche.github.io/marcel-cigogne.html">Marcel & Cigogne</a></dd>
     <dt>ven. 10 novembre 2017</dt>
     <dd><a href="https://matouche.github.io/peur-bleue.html">Peur bleue</a></dd>
     <dt>jeu. 05 octobre 2017</dt>
@@ -63,8 +69,7 @@
                     <div class="about">
                             <h2>À propos</h2>
                             <p class="description">
-                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard.
-                 J'aime bien le cinéma d'animation.
+                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D.
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
