--- a/demo-reel-2018.html
+++ b/demo-reel-2018.html
@@ -10,16 +10,16 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-        <title>Mathis Dubrul</title>
-        <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
+        <title>Demo Reel 2018 - Mathis Dubrul</title>
+        <meta name="description" content="" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
-        <meta property="og:title" content="Mathis Dubrul" />
-        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
-        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Demo Reel 2018 - Mathis Dubrul" />
+        <meta property="og:description" content="" />
+        <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
-        <link rel="canonical" href="https://matouche.github.io" />
-        <meta property="og:url" content="https://matouche.github.io" />
+        <link rel="canonical" href="https://matouche.github.io/demo-reel-2018.html" />
+        <meta property="og:url" content="https://matouche.github.io/demo-reel-2018.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -32,16 +32,35 @@
                         Mathis Dubrul
  <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
-                        <a  href="https://matouche.github.io/category/animation.html">Animation</a>
+                        <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-<ul>
-    <li><a href="https://matouche.github.io/category/animation.html">Animation</a></li>
-    <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a></li>
-</ul>
+
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/demo-reel-2018.html" rel="bookmark"
+            title="Permalien vers Demo Reel 2018">
+                Demo Reel 2018
+            </a></h1>
+            <p class ="info">
+                Publié le mar. 26 juin 2018 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/animation.html">
+                    Animation</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <iframe src="https://player.vimeo.com/video/277073579"
+ width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+</iframe>
+    </div>
+</article>
             </section>
 
             <div class="extra">
