--- a/404.html
+++ b/404.html
@@ -50,8 +50,7 @@
                     <div class="about">
                             <h2>À propos</h2>
                             <p class="description">
-                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard.
-                 J'aime bien le cinéma d'animation.
+                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D.
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
