--- a/authors.html
+++ b/authors.html
@@ -11,11 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Mathis Dubrul - Authors</title>
-        <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
+        <meta name="description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Mathis Dubrul - Authors" />
-        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard. J'aime bien le cinéma d'animation." />
+        <meta property="og:description" content="Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io" />
@@ -40,7 +40,7 @@
             <section class="content">
     <h1>Authors on Mathis Dubrul</h1>
 
-    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (7)</li>
+    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (10)</li>
     </ul>
             </section>
 
@@ -48,8 +48,7 @@
                     <div class="about">
                             <h2>À propos</h2>
                             <p class="description">
-                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard.
-                 J'aime bien le cinéma d'animation.
+                                Je suis étudiant en 2ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D.
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
