--- a/oiseaux-migrateurs.html
+++ b/oiseaux-migrateurs.html
@@ -10,18 +10,16 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-        <title>Peur bleue - Mathis Dubrul</title>
-        <meta name="description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
-et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+        <title>Oiseaux migrateurs - Mathis Dubrul</title>
+        <meta name="description" content="Quelques illustrations réalisées en cours autour d'un livre parlant de migrations à travers des oiseaux. Le parti-pris était de tout faire au crayon télévision (bicolore rouge et bleu)." />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
-        <meta property="og:title" content="Peur bleue - Mathis Dubrul" />
-        <meta property="og:description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
-et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+        <meta property="og:title" content="Oiseaux migrateurs - Mathis Dubrul" />
+        <meta property="og:description" content="Quelques illustrations réalisées en cours autour d'un livre parlant de migrations à travers des oiseaux. Le parti-pris était de tout faire au crayon télévision (bicolore rouge et bleu)." />
         <meta property="og:type" content="article" />
-        <meta property="og:image" content="https://matouche.github.io/images/peur_bleue.jpg" />
-        <link rel="canonical" href="https://matouche.github.io/peur-bleue.html" />
-        <meta property="og:url" content="https://matouche.github.io/peur-bleue.html" />
+        <meta property="og:image" content="https://matouche.github.io/images/oiseaux_migrateurs_1.png" />
+        <link rel="canonical" href="https://matouche.github.io/oiseaux-migrateurs.html" />
+        <meta property="og:url" content="https://matouche.github.io/oiseaux-migrateurs.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -34,8 +32,8 @@ et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvem
                         Mathis Dubrul
  <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
-                        <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
-                        <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
+                        <a  href="https://matouche.github.io/category/animation.html">Animation</a>
+                        <a  class="active" href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
@@ -44,24 +42,26 @@ et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvem
 <article>
         <header>
             <h1 class="article_title">
-            <a href="https://matouche.github.io/peur-bleue.html" rel="bookmark"
-            title="Permalien vers Peur bleue">
-                Peur bleue
+            <a href="https://matouche.github.io/oiseaux-migrateurs.html" rel="bookmark"
+            title="Permalien vers Oiseaux migrateurs">
+                Oiseaux migrateurs
             </a></h1>
             <p class ="info">
-                Publié le ven. 10 novembre 2017 par
+                Publié le lun. 28 mai 2018 par
                         <a class="url fn"
                         href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
-                dans <a href="https://matouche.github.io/category/animation.html">
-                    Animation</a>.
+                dans <a href="https://matouche.github.io/category/illustration.html">
+                    Illustration</a>.
             </p>
         </header>
 
     <div class="article_content">
-        <p><a href="https://ncloud.zaclys.com/index.php/s/wDyL3DKqecB9Mic"><img alt="Peur bleue" src="https://matouche.github.io/images/peur_bleue.jpg"></a></p>
-<p>Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier.<br>
-J'ai plus particulièrement réalisé l'animation des visages sous le lit et participé à l'animation du bras.</p>
-<p>Cliquez sur l'image pour le voir en mouvement !</p>
+        <p><img alt="Des tas d'oiseaux" src="https://matouche.github.io/images/oiseaux_migrateurs_1.png">
+<img alt="Une valise avec des oiseaux dessus" src="https://matouche.github.io/images/oiseaux_migrateurs_4.png">
+<img alt="Ça donne faim" src="https://matouche.github.io/images/oiseaux_migrateurs_2.png">
+<img alt="Ça aussi" src="https://matouche.github.io/images/oiseaux_migrateurs_3.png"></p>
+<p>Quelques illustrations réalisées en cours autour d'un livre parlant de migrations à travers des oiseaux.
+Le parti-pris était de tout faire au crayon télévision (bicolore rouge et bleu).</p>
     </div>
 </article>
             </section>
