Generate Pelican site

--- a/little-agent.html
+++ b/little-agent.html
@@ -86,6 +86,7 @@ tout, contrainte technique oblige, en un peu moins de deux minutes. Et c'est acc
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
+                                    <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
                             </ul>
                     </div>
             </div>
