--- a/archives.html
+++ b/archives.html
@@ -75,6 +75,7 @@
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
+                                    <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
                             </ul>
                     </div>
             </div>
