Generate Pelican site

--- a/extra/specials/cv/index.html
+++ b/extra/specials/cv/index.html
@@ -39,14 +39,24 @@
         </section>
         <section class="education">
             <div class="education_wrapper">
-                <h1>Études</h1>
+                <h1>Formation</h1>
                 <h2>2016 – aujourd’hui, Haute École Albert Jacquard, Namur</h2>
                 <p>Bachelier en techniques graphiques Animation et Illustration Numérique 2D</p>
-                <h2>2017, BAFA</h2>
-                <p>Approfondissement Accompagnement culturel au Festival du film de Douarnenez (Goùel ar Filmoù)</p>
-                <h2>2016, Baccalauréat Général</h2>
-                <p>Filière S - Option Arts Plastiques<br />
-                Option Internationale Portugais</p>
+                <ul class="small">
+                    <li>Centré sur les techniques numériques (suite Adobe et TVPaint)</li>
+                    <li>Aproche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
+                    <li>Exercices d’écriture et de découpage avec des intervenants extérieurs</li>
+                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14)</li>
+                </ul>
+                <h2 class="small">Diplômes</h2>
+                <p class="small">
+                    <strong>2016, Baccalauréat Général</strong><br />
+                    Option Internationale Portugais<br />
+                    Filière S - Option Arts Plastiques
+                </p>
+                <p  class="small"><strong>2017, BAFA</strong><br />
+                    Approfondissement Accompagnement culturel au Festival du film de Douarnenez (<em>Goùel ar Filmoù</em>)
+                </p>
             </div>
         </section>
         <section class="skills">
@@ -83,7 +93,7 @@
                         maternelle<br />
                         <strong>Português</strong><br />
                         ± fluente<br />
-                        <strong>Anglais</strong><br />
+                        <strong>English</strong><br />
                         spoken & written
                     </p>
                 </div>
@@ -93,9 +103,10 @@
             <div class="experience_wrapper">
                 <h1>Autres expériences</h1>
                 <h2>2017, Publication d’un cours en ligne</h2>
-                <p>sur la technologie Web Sass (http://bit.ly/2Be0A4n)</p>
+                <p>sur la technologie Web Sass (<a href="http://bit.ly/2Be0A4n">Zeste de Savoir</a>)</p>
                 <h2>Été 2016 à 2018, Animateur en centre de loisirs</h2>
                 <p>MJC Parmentier de Grenoble (2016-2018) et Centre Les Ouistitis à Meylan (2018)</p>
+                <p><strong>2015 :</strong> Assistant sur un mini-stage de <em>stop-motion</em> auprès d'enfants de 6-8 ans, Association Cinémagie (Grenoble)</p>
                 <h2>Bénévolat</h2>
                 <p>juin 2018, <strong>Festival International du Film d’Animation d’Annecy</strong></p>
                 <p>juillet 2015 à 2018, <strong>Festival du Film Court en Plein Air de Grenoble</strong></p>
