Generate Pelican site

--- a/demo-reel-2018.html
+++ b/demo-reel-2018.html
@@ -11,11 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Demo Reel 2018 - Mathis Dubrul</title>
-        <meta name="description" content="" />
+        <meta name="description" content="Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) ! [EN] Looking for a 12-week internship in a studio
+from november 2018 to january 2019. Feel free to contact me if you're interested …" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Demo Reel 2018 - Mathis Dubrul" />
-        <meta property="og:description" content="" />
+        <meta property="og:description" content="Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) ! [EN] Looking for a 12-week internship in a studio
+from november 2018 to january 2019. Feel free to contact me if you're interested …" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
         <link rel="canonical" href="https://matouche.github.io/demo-reel-2018.html" />
@@ -59,6 +61,12 @@
         <iframe src="https://player.vimeo.com/video/277073579"
  width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
 </iframe>
+
+<p>Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) !</p>
+<p>[EN]<br>
+Looking for a 12-week internship in a studio from november 2018 to january 2019. Feel free to contact me if you're interested (e-mail at the end of the video) !</p>
+<p>[PT]<br>
+Estou a procura de um estágio de 12 semanas num estúdio de animação de novembro de 2018 até janeiro de 2019. Envie-me uma mensagem se estiver interessado (e-mail no fim do video) !</p>
     </div>
 </article>
             </section>
