--- a/extra/specials/cv/index.html
+++ b/extra/specials/cv/index.html
@@ -46,7 +46,7 @@
                     <li>Centré sur les techniques numériques (suite Adobe et TVPaint)</li>
                     <li>Aproche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
                     <li>Exercices d’écriture et de découpage avec des intervenants extérieurs</li>
-                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14)</li>
+                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14) − <a href="https://www.fiff.be/films/little-agent/6459">Sélectionné au FIFF 2018 (Section Campus)</a></li>
                 </ul>
                 <h2 class="small">Diplômes</h2>
                 <p class="small">
