Generate Pelican site

--- a/peur-bleue.html
+++ b/peur-bleue.html
@@ -12,12 +12,12 @@
 
         <title>Peur bleue - Mathis Dubrul</title>
         <meta name="description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
-et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+et participé à l'animation du bras." />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Peur bleue - Mathis Dubrul" />
         <meta property="og:description" content="Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier. J'ai plus particulièrement réalisé l'animation des visages sous le lit
-et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvement !" />
+et participé à l'animation du bras." />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/peur_bleue.jpg" />
         <link rel="canonical" href="https://matouche.github.io/peur-bleue.html" />
@@ -59,9 +59,10 @@ et participé à l'animation du bras. Cliquez sur l'image pour le voir en mouvem
 
     <div class="article_content">
         <p><a href="https://ncloud.zaclys.com/index.php/s/wDyL3DKqecB9Mic"><img alt="Peur bleue" src="https://matouche.github.io/images/peur_bleue.jpg"></a></p>
+<iframe src="https://player.vimeo.com/video/290657280?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
 <p>Zootrope en volume construit en groupe avec Andrea Mondadori, Ayité Ajavon, Gaëlle De Jesus Silva, Marie Royer et Zinia Scorier.<br>
 J'ai plus particulièrement réalisé l'animation des visages sous le lit et participé à l'animation du bras.</p>
-<p>Cliquez sur l'image pour le voir en mouvement !</p>
     </div>
 </article>
             </section>
