--- a/demo-reel-2018.html
+++ b/demo-reel-2018.html
@@ -58,9 +58,9 @@ from november 2018 to january 2019. Feel free to contact me if you're interested
         </header>
 
     <div class="article_content">
-        <iframe src="https://player.vimeo.com/video/277073579"
- width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-</iframe>
+        <iframe src="https://player.vimeo.com/video/277073579?title=0&byline=0&portrait=0"
+    width="640" height="360" frameborder="0"
+    webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <p>Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) !</p>
 <p>[EN]<br>
