--- a/little-agent.html
+++ b/little-agent.html
@@ -11,13 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Little Agent - Mathis Dubrul</title>
-        <meta name="description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
-méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
+        <meta name="description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique
+oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent est visible pour toute la durée …" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Little Agent - Mathis Dubrul" />
-        <meta property="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que
-méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de …" />
+        <meta property="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique
+oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent est visible pour toute la durée …" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/little_agent_screenshot_1.png" />
         <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
@@ -60,9 +60,7 @@ méchant. Pour empêcher le régicide, notre héros coupe court à ses vacances 
     <div class="article_content">
         <h1>Synopsis</h1>
 <p>Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le
-Roi d’une tentative aussi diabolique que ridicule d’attentat par un savant plus fou que méchant.
-Pour empêcher le régicide, notre héros coupe court à ses vacances et fait fi de tous les obstacles. Le
-tout, contrainte technique oblige, en un peu moins de deux minutes. Et c'est accessoirement mon film de fin d'année.</p>
+Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique oblige, en un peu moins de deux minutes.</p>
 <h1>Quelques images</h1>
 <p><img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_1.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_2.png">
